<resources>
    <!-- Strings related to name and description -->
    <string name="app_name">GooDMoM</string>
    <string name="description">Gestational Diabetes Mobile Management</string>
    <string name="background_image">Background image of pregnant woman</string>

    <!-- Strings related to activity labels -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="title_add_reminder">Add Reminder</string>
    <string name="title_activity_data">Data</string>
    <string name="title_add_data">Add Data</string>
    <string name="title_activity_messenger">Messenger</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_personal_info">Personal Info</string>
    <string name="title_activity_clinical_info">Clinical Info</string>

    <!-- Strings related to more options menu and buttons -->
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Sign In</string>
    <string name="log_out">Sign Out</string>
    <string name="exit">Exit</string>
    <string name="save">Save &amp; Continue</string>
    <string name="help">Help &amp; Feedback</string>
    <string name="create_event">Create Event</string>
    <string name="add_data">Add Data</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="my_profile">My Profile</string>

    <!-- Strings related to the messenger -->
    <string name="send_button_label">Send</string>

    <!-- Strings related to sign up -->
    <string-array name="province_array">
        <item>Eastern Cape</item>
        <item>Free State</item>
        <item>Gauteng</item>
        <item>Kwazulu Natal</item>
        <item>Mpumalanga</item>
        <item>Limpopo</item>
        <item>North West</item>
        <item>Northern Cape</item>
        <item>Western Cape</item>
    </string-array>

    <string-array name="hp_array">
        <item>Obstetrician</item>
        <item>General Practitioner</item>
        <item>Midwife</item>
    </string-array>

    <string-array name="diabetes_array">
        <item>Gestational Diabetes</item>
        <item>Type 1 Diabetes</item>
        <item>Type 2 Diabetes</item>
    </string-array>

    <string name="id">Identity Number</string>
    <string name="id_hint">e.g. 0000000000000</string>
    <string name="phone">Cellphone Number</string>
    <string name="phone_hint">e.g. 0820000000</string>
    <string name="house">House No.</string>
    <string name="house_hint">e.g. 1</string>
    <string name="street">Street</string>
    <string name="street_hint">e.g. Main Road</string>
    <string name="city">City</string>
    <string name="city_hint">e.g. Cape Town</string>
    <string name="province">Province</string>
    <string name="post">Postal Code</string>
    <string name="post_hint">e.g. 7700</string>

    <string name="hp_surname">Healthcare Professional Surname</string>
    <string name="hp_surname_hint">e.g. Barnard</string>
    <string name="hp_uid">Healthcare Professional User ID</string>
    <string name="hp_uid_hint">Enter the code given to you</string>
    <string name="hp_type">Healthcare Professional Type</string>
    <string name="height">Height</string>
    <string name="height_unit">cm</string>
    <string name="prepregnancy_weight">Pre-pregnancy Weight</string>
    <string name="body_weight_unit_short">Kg</string>
    <string name="diabetes_type">Diabetes Type</string>
    <string name="due_date">Due Date</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_default_display_name">Jane Doe</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_tone">Notification Tone</string>
    <string name="pref_tone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to reminders -->
    <string-array name="event_type_array">
        <item>Appointment</item>
        <item>Medication</item>
        <item>Glucose Reading</item>
    </string-array>

    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="period_week_day_array">
        <item>day(s)</item>
        <item>week(s)</item>
        <item>month(s)</item>
    </string-array>

    <string name="enter_title_hint">Enter Title</string>
    <string name="add_location_hint">Add location</string>
    <string name="add_note_hint">Add note</string>
    <string name="repeat">Repeat</string>
    <string name="every">every</string>
    <string name="weeks">weeks</string>
    <string name="end">End</string>
    <string name="after">after</string>
    <string name="counts">counts</string>

    <!-- Strings related to data -->
    <string name="glucose_instruction">Enter blood glucose data</string>
    <string name="data_instruction">Enter data relevant since your last entry</string>
    <string name="glucose_unit">mmol/L</string>
    <string name="meal">Meal</string>
    <string name="meal_hint">Your last meal</string>
    <string name="carbs">Carbs</string>
    <string name="carbs_unit">grams</string>
    <string name="activity">Activity</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="activity_hint">Exercise since last entry</string>
    <string name="body_weight">Weight</string>
    <string name="body_weight_unit">kilograms</string>
    <string name="medication">Medication</string>
    <string name="medication_hint">Medication since last entry</string>
    <string name="avg_glucose">Average Glucose</string>
    <string name="tot_carbs">Total Carbs</string>
    <string name="tot_act_time">Total Exercise</string>
    <string name="avg_weight">Average Weight</string>
    <string name="blood_pressure">B. Pressure</string>
    <string name="avg_blood_pressure">Average BP</string>
    <string name="blood_pressure_unit">mmHg</string>
    <string name="symptoms">Symptoms</string>
    <string name="select_symptoms">Select symptoms</string>
    <string name="data">Data</string>

    <string-array name="glucose_time_array">
        <item>Before meal</item>
        <item>Directly after meal</item>
        <item>1 Hr after meal</item>
        <item>2 Hr after meal</item>
        <item>Random</item>
    </string-array>

    <string-array name="act_type_array">
        <item>None</item>
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Swimming</item>
        <item>Weights</item>
        <item>Yoga</item>
    </string-array>

    <string name="severe_thirst">Severe thirst</string>
    <string name="severe_fatigue">Severe fatigue</string>
    <string name="abdominal_pain">Abdominal pain</string>
    <string name="severe_nausea">Severe nausea</string>
    <string name="blurred_vision">Blurred vision</string>
    <string name="persistent_headache">Persistent headache</string>
    <string name="flu">Flu</string>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="day_in_month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="period_array">
        <item>Day</item>
        <item>Month</item>
        <item>Full Gestation</item>
    </string-array>

    <string-array name="chart_type_array">
        <item>Glucose</item>
        <item>Carbs</item>
        <item>Activity</item>
        <item>Weight</item>
        <item>Blood Pressure</item>
    </string-array>

    <string-array name="locations_array">
        <item>Home</item>
        <item>Work / School</item>
        <item>Exercise Venue</item>
        <item>Shopping Mall</item>
        <item>Outdoor</item>
    </string-array>

    <!-- Strings related to profile -->
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="dob">Date of Birth</string>
    <string name="bmi">Body Mass Index</string>
    <string name="hp">Linked Healthcare Professional</string>
    <string name="glucose_range">Glucose Range</string>
    <string name="weight_range">Weight Range</string>
    <string name="activity_goal">Activity Goal</string>
    <string name="carbs_goal">Carbs Goal</string>
    <string name="no_data">No Data</string>

    <!-- Strings related to due date calculator -->
    <string name="calculate_due_date">Calculate Due Date</string>
    <string name="calculation_method">Calculation Method</string>
    <string name="conception_date">Date of Conception</string>
    <string name="last_period_date">First Day of Last Period</string>
    <string name="cycle_length">Cycle Length</string>
    <string-array name="calculation_method_array">
        <item>Conception Date</item>
        <item>Last Period</item>
    </string-array>
    <string-array name="cycle_length_array">
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>

    <!-- Strings related to Help & Feedback -->
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="alpha">Alpha</string>
    <string name="legal">Legal</string>
    <string name="copyright">Copyright</string>
    <string name="jason_collier_2019">\u00A9 Jason Collier 2019</string>
    <string name="email_us">Email Us</string>

</resources>
