<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/thirst_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/severe_thirst" />

        <CheckBox
            android:id="@+id/fatigue_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/severe_fatigue" />

        <CheckBox
            android:id="@+id/pain_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abdominal_pain" />

        <CheckBox
            android:id="@+id/nausea_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/severe_nausea" />

        <CheckBox
            android:id="@+id/vision_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blurred_vision" />

        <CheckBox
            android:id="@+id/headache_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/persistent_headache" />

        <CheckBox
            android:id="@+id/flu_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/number_picker"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|end"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primary" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>