<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_general">

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="username"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_notifications">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
        when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_message"
            android:title="@string/pref_title_message_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_message"
            android:key="notifications_message_tone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_tone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_message"
            android:key="notifications_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

</PreferenceScreen>