<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/calculation_method_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculation_method"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Spinner
            android:id="@+id/method_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/conception_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conception_date"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/last_period_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_period_date"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/baseline_access_time_24" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                tools:text="Tue, 1 Jan 2019" />
        </LinearLayout>

        <TextView
            android:id="@+id/cycle_length_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cycle_length"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Spinner
            android:id="@+id/cycle_length_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/number_picker"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/ok_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|end"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primary" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>